Changed the output type to plain TeX.

--- a/Project-des.tex
+++ b/Project-des.tex
@@ -82,8 +82,8 @@ slit and the screen, $d$, the width of the slit, $\lambda$, the
 wavelength of laser, and a serie of transverse displacement $\delta d_{i},$where
 the peaks interference are measured. For the photo-detector, we can
 measure more data such that we can generate a continuous plot with
-peaks and troughs.
-
+peaks and troughs at various angles. The purpose of generating this
+plot is to compare with the plot 
 
 \section{Goals}
 \begin{enumerate}
